--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>AluraPlus</title>
 </head>
 <body>
-    <section class="principal">
+    <section class="container principal">
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <img src="./img/Combo.png" alt="O combo AluraPlus">
     </section>
