--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+    <link rel="preconnect" href="https;//onts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https;//fonts.googleapis.com/css2?family-inter:wght@100..900&display-swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>AluraPlus</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <title>Alura Plus</title>
 </head>
+
 <body>
     <section class="container principal">
-    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <img src="./img/Combo.png" alt="O combo AluraPlus">
+        <div>
+            <h1 class="container-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="./img/Combo.png" alt="O combo AluraPlus">
+            <a href="www.alura.com.br" class="container-botao">Assine por 12x de R$ 120,00*</a>
+            <a hrf="www.alura.com.br" class="container-botao botao-secundario> assinar somente o Alura</a>
+            <p class="container-aviso"> "O preço pode variar caso a asinatura seja feita em outro planos</p>
+        </div>
     </section>
 </body>
+
 </html>
