--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="preconnect" href="https;//onts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https;//fonts.googleapis.com/css2?family-inter:wght@100..900&display-swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -16,13 +13,19 @@
 
 <body>
     <section class="container principal">
-        <div>
+        <div class="container-caixa">
             <h1 class="container-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="./img/Combo.png" alt="O combo AluraPlus">
+            <img src="./img/Combo.png" alt="O combo AluraPlus" class="container-imagem">
             <a href="www.alura.com.br" class="container-botao">Assine por 12x de R$ 120,00*</a>
-            <a hrf="www.alura.com.br" class="container-botao botao-secundario> assinar somente o Alura</a>
-            <p class="container-aviso"> "O preço pode variar caso a asinatura seja feita em outro planos</p>
+            <a href="www.alura.com.br" class="container-botao botao-secundario">Assinar somente o Alura+</a>
+            <p class="container-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
         </div>
+    </section>
+    <section class="container secundario"> 
+        <img src="./imgpixel.png" alt="Um monitor com AluraPlus aberto" class="imagem-secundario">
+        <iv class="container-descricao">
+        <h2> class="descricao-titulo"> Assista do seu jeito </h2>
+        <p class="descricao-texto"> Aproveite a tela grande da TV ou assista no tablet, celular e outros aparelhos. Nossa seleção de cursos não para de crescer. </p>
     </section>
 </body>
 
