--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
         <iv class="container-descricao">
         <h2> class="descricao-titulo"> Assista do seu jeito </h2>
         <p class="descricao-texto"> Aproveite a tela grande da TV ou assista no tablet, celular e outros aparelhos. Nossa seleção de cursos não para de crescer. </p>
+        </div>
     </section>
+    </section>
+<section class="container secundario"> 
+    <iv class="container-descricao">
+    <h2> class="descricao-titulo"> </h2>
+    <p class="descricao-texto"></p>
+    </div>
+</section>
 </body>
 
 </html>
